- assignta.sh
- getsch.sh
- bbfix.sh (replaced by bsunzip.sh)
- upload.sh
- mksdir.sh
- hak2.sh (replaced by hak3.sh)
- groepjes.sh (replaced by identify.sh)

Also, xmail.sh was deleted, because it was a silly script.

2A) Disabled scripts

These scripts require some knowledge about how teaching assistants write
down grades inside the directories obtained from Brightspace

- count.sh
- stats.sh
- grades.sh

2B) Scripts that need a re-think

E.g., feedback.sh could prepare a .zip to upload to Brightspace; or should it mail?

- wizard.sh
- feedback.sh

3) Scripts that needed little modifications.

- jarify.sh
- iching.sh
- pol.sh
- trialc.sh

4) New/ported scripts

- bsunzip.sh
	unzips a zip file downloaded from brightspace, and sorts the submission comments contained in 'index.html'
	into the correct folders (as a .txt file)
- hak3.sh
	sorts *all subdirectories* into fresh bins (hak2.sh only sorted s-directories)
	note: this probably also need to split/distribute the index.html that brightspace gives us
- identify.sh
	replacement for 'groepjes.sh'; figures out which directory corresponds to which user/email combo; also
	scrapes submitted files for possible student ids. this script will generate '#address.txt' files in folders
- dupes.sh 
	finds possible duplicate handins in C++/Java code
- antifmt.sh
	now expects the directories to process as arguments
	(any arguments that are not directories will be ignored)
- collectplag.sh
	edited out the part that fetches grading/name info; substituted by simply
	giving the directory name of the offending submission
- rgrade.sh
	instead of relying on the 'Graded:' column, this now drops a hidden ".todo" file when you start grading,
	which it gradually removes as you progress
- verdeel.sh
	does roughly the same thing as before, but you need to download the .zip from brightspace yourself now; also,
	if you bother to download a .csv (containing firstname/lastname/email/studentids), you get more functionality
- mailto.sh