@@ -25,7 +25,6 @@ down grades inside the directories obtained from Brightspace
 
 - count.sh
 - stats.sh
-- grades.sh
 
 2B) Scripts that need a re-think
 
@@ -66,5 +65,9 @@ E.g., feedback.sh could prepare a .zip to upload to Brightspace; or should it ma
 - verdeel.sh
 	does roughly the same thing as before, but you need to download the .zip from brightspace yourself now; also,
 	if you bother to download a .csv (containing firstname/lastname/email/studentids), you get more functionality
+	allowing you to send email (using mailto), and it will generate a grades.csv stub
+	NOTE: Brightspace has no automatic linkage between grade entries and assignment names
 - mailto.sh
-	modified; expects the '#address.txt' files generated by 'identify.sh', and expects filenames as an argument
+	modified; expects the '#address.txt' files generated by 'identify.sh'
+- grades.sh
+	modified; expects arguments to contain a "Grade" line
